# analytics-dataset

./: .buildinfo  .gitignore  README.md  analyticsdf.html  autogen_visual_v2.ipynb  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  test-instruction.md  tox.ini  usage.html
.github/workflows/: documentation.yml  unit.yml
_modules/: index.html
_modules/analyticsdf/: analyticsdataframe.html
_sources/: modules.rst.txt
analyticsdf-all-platform/linux-64/: analyticsdf-0.0.4.3-py39h7772d1b_0.tar.bz2
analyticsdf-all-platform/linux-aarch64/: analyticsdf-0.0.4.3-py39h7772d1b_0.tar.bz2
analyticsdf-all-platform/win-64/: analyticsdf-0.0.4.3-py39h7772d1b_0.tar.bz2
code/: AnalyticsDataframe.py  README.md  pyproject.toml  setup.py
code/src/: setup.py
code/src/example_package_analyticsdf/: __init__.py  analyticsdataframe.py  autogen_class.py  utils.py
code/tests/: test_basic.py  tests.py
conda-package/analyticsdf/: README.md  meta.yaml
conda-package/analyticsdf-all-platform/linux-32/: analyticsdf-0.0.4.3-py39h7772d1b_0.tar.bz2
conda-package/analyticsdf-all-platform/linux-armv6l/: analyticsdf-0.0.4.3-py39h7772d1b_0.tar.bz2
conda-package/analyticsdf-all-platform/linux-armv7l/: analyticsdf-0.0.4.3-py39h7772d1b_0.tar.bz2
conda-package/analyticsdf-all-platform/linux-ppc64/: analyticsdf-0.0.4.3-py39h7772d1b_0.tar.bz2
conda-package/analyticsdf-all-platform/linux-ppc64le/: analyticsdf-0.0.4.3-py39h7772d1b_0.tar.bz2
conda-package/analyticsdf-all-platform/linux-s390x/: analyticsdf-0.0.4.3-py39h7772d1b_0.tar.bz2
conda-package/analyticsdf-all-platform/osx-64/: analyticsdf-0.0.4.3-py39h7772d1b_0.tar.bz2
conda-package/analyticsdf-all-platform/osx-arm64/: analyticsdf-0.0.4.3-py39h7772d1b_0.tar.bz2
conda-package/analyticsdf-all-platform/win-32/: analyticsdf-0.0.4.3-py39h7772d1b_0.tar.bz2
docs/: README.md  analyticsdf.rst  conf.py  index.rst  requirements.txt  usage.rst
notebooks/: existing_sdv.ipynb  getting_started.ipynb  github_workflow.ipynb
pypi/: README.md
src/analyticsdf/: __init__.py  analyticsdataframe.py  paramsCrypt.py
src/example_package_analyticsdf/: __init__.py  analyticsdataframe.py
tests/: README.md  test-instruction.md  test_basic.py
