[metadata]
name = analyticsdf
version = 0.0.7
description = Analytic generation of datasets with specified statistical characteristics.
long_description = file: README.md
long_description_content_type = text/markdown
author = Fei, Eli
author_email = yufanfei@usc.edu
license = MIT
license_files = LICENSE
url = https://github.com/Faye-yufan/analytics-dataset
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    analyticsdf
install_requires =
    numpy
    pandas
    scipy
    scikit-learn
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
analyticsdf = py.typed

[flake8]
max-line-length = 160