[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_analyticsdf"
version = "0.0.5"
authors = [
  { name="Yufan Fei", email="yufanfei@usc.edu" },
  { name="Eli Wang", email="eliwangc@gmail.com"}
]
description = "A example package for Analytics Dataframe"
readme = "./README.md"
license = { file="./LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Faye-yufan/analytics-dataset"